--- a/estilo.css
+++ b/estilo.css
@@ -231,3 +231,25 @@ a{
     width: 15%;
     height: 60px;
 }
+
+.cartelMarcas{
+  background-color: #003d80;
+  width: 90%;
+  height: 50px;
+  margin-left: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4%;
+  color: white;
+}
+
+.cartelMarcas p{
+  font-family: "Open Sans", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: initial;
+  font-variation-settings:
+    "wdth" 100;
+    font-size: x-large;
+}
