--- a/estilo.css
+++ b/estilo.css
@@ -228,8 +228,8 @@ a{
 }
 
 .contenedorMarcas img{
-    width: 15%;
-    height: 60px;
+    width: 8%;
+    height: 40px;
 }
 
 .cartelMarcas{
@@ -252,4 +252,106 @@ a{
   font-variation-settings:
     "wdth" 100;
     font-size: x-large;
+}
+
+
+/*Productos*/
+.main-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  background-color: #f5f5f5;
+  margin-top: 8%;
+  margin-bottom: 8%;
+}
+
+.banner {
+  flex: 1;
+  background-color: #dfe6e9;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.products {
+  flex: 3;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.product {
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 10px;
+  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+}
+
+.product:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.product img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.product h3 {
+  font-size: 18px;
+  color: #333333;
+  margin-bottom: 10px;
+}
+
+.product p {
+  font-size: 16px;
+  color: #555555;
+  margin-bottom: 10px;
+}
+
+.main-container .banner img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+@media (min-width: 768px) {
+  .product img{
+    width: 100%;
+    height: 150px;
+  }
+}
+
+/* Media Queries */
+@media (min-width: 768px) {
+  .main-container {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .banner {
+    flex: 1;
+  }
+
+  .products {
+    flex: 3;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+}
+
+@media (max-width: 576px) {
+  .product h3 {
+    font-size: 16px;
+  }
+
+  .product p {
+    font-size: 14px;
+  }
+
+  .product {
+    padding: 8px;
+  }
 }
