--- a/estilo.css
+++ b/estilo.css
@@ -17,13 +17,16 @@ p {
 
 /*----------------------------------------------------Estilo encabezado--------------------------------------------*/
 .header {
-  width: 100%;
-  height: 100px;
-  background-color: rgb(255, 255, 255);
+  width: 100%;/*Ancho*/
+  height: 100px;/*Alto*/
+  background-color: rgb(255, 255, 255);/*Color de fondo*/
+  /*Flexbox*/
   display: flex;
+  /*Borde*/
   border-bottom: 1px solid #757575;
 }
 
+/*Logo*/
 .contenedorLogo {
   width: 15%;
   height: auto;
@@ -36,9 +39,10 @@ p {
 }
 
 .contenedorUsuario {
-  width: 30%;
-  background-color: rgb(255, 255, 255);
+  width: 30%;/*Ancho*/
+  background-color: rgb(255, 255, 255);/*Color de fondo*/
   height: auto;
+  /*Flexbox*/
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -55,14 +59,17 @@ p {
 
 /*Buscador*/
 .contenedorBuscador {
+  /*Flexbox*/
   display: flex;
   align-items: center;
   justify-content: left;
+  /*Estilo*/
   background-color: #ffffff;
   width: 100%;
   gap: 10px; /* Espacio entre el campo y el botón */
 }
 
+/*Estilo input*/
 .text-input {
   width: 50%;
   margin-left: 5%;
@@ -370,7 +377,7 @@ p {
 
 .pieDePagina a {
   text-decoration: none; /* Elimina el subrayado */
-  color: inherit; 
+  color: inherit;
   cursor: pointer;
 }
 
@@ -378,7 +385,7 @@ p {
   width: 30%; /* Mantiene el 30% en pantallas grandes */
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
 }
 
 .contenedorLogoPiePagina img {
@@ -445,26 +452,28 @@ p {
   }
 }
 
-/*------------------------------------------------Contenedor producto---------------------------------------------------*/
+/*------------------------------------------------Contenedor producto(producto.html)---------------------------------------------------*/
 .contenedorProducto {
-  background-color: #ffffff;
-  width: 90%;
-  margin-left: 5%;
-  margin-top: 5%;
+  background-color: #ffffff; /*Color de fondo de contenedor*/
+  width: 90%; /*Ancho*/
+  margin-left: 5%; /*Margen izquierdo*/
+  margin-top: 5%; /*Margen superior*/
+  /*grid*/
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
   column-gap: 2rem;
 }
 
 .contenedorImagenesProducto {
+  /*Flex*/
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .contenedorImagenesProducto img {
-  width: 80%;
-  height: auto;
+  width: 80%; /*Ancho*/
+  height: auto; /*Alto*/
 }
 
 .contenedorImagenPrincipal {
@@ -476,17 +485,20 @@ p {
 }
 
 .contenedorDetalle {
+  /*grid*/
   display: grid;
   grid-template-rows: auto;
   row-gap: 1rem;
 }
 
 .contenedorTalle {
+  /*Flex*/
   display: flex;
   justify-content: space-between;
 }
 
 .contenedorCantidad {
+  /*Flex*/
   display: flex;
   align-items: center;
   gap: 10px;
@@ -494,6 +506,7 @@ p {
 }
 
 .botonCantidad {
+  /*Flex*/
   display: flex;
   align-items: center;
   gap: 10px;
@@ -517,10 +530,12 @@ p {
 }
 
 .contenedorPromociones {
+  /*Flex*/
   display: flex;
   gap: 10px;
 }
 
+/*Estilo boton*/
 .contenedorPromociones button {
   border: none;
   background: none;
@@ -530,6 +545,8 @@ p {
 .contenedorPromociones img {
   width: 50px;
 }
+
+/*------------------------------------MEDIA(producto.html-responsive)--------------------------------------------*/
 
 /* Media Queries */
 @media (max-width: 992px) {
@@ -554,9 +571,9 @@ p {
 
 @media (max-width: 768px) {
   .contenedorProducto {
-    width: 90%;
-    margin-left: 5%;
-    padding: 10px;
+    width: 90%; /*Ancho*/
+    margin-left: 5%; /*Margen izquierdo*/
+    padding: 10px; /*Relleno*/
   }
 
   .contenedorImagenesProducto img {
@@ -608,25 +625,30 @@ p {
 /*Productos relacionados*/
 
 .contenedorTextoSugerencia {
-  width: 90%;
+  width: 90%; /*Ancho*/
   background-color: #003d80;
+  /*Margenes*/
   margin-left: 5%;
   margin-top: 8%;
   color: #dfe6e9;
+  /*Flexbox*/
   display: flex;
   justify-content: center;
 }
 
 /*Productos relacionados*/
 .contenedorProductosRelacionados {
+  /*Flexbox*/
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
   justify-content: center; /* Centra los productos */
   padding: 16px;
+  /*Color de fondo*/
   background-color: #c51b1b;
 }
 
+/*Productos relacionados*/
 .contenedorProductosRelacionados {
   display: flex;
   flex-wrap: wrap;
@@ -653,7 +675,7 @@ p {
   margin-bottom: 8px;
 }
 
-/* Responsive styles */
+/*--------------------------------------MEDIA(productos relacionados -> producto.html responsive)*/
 @media (max-width: 768px) {
   .contenedorProductosRelacionados {
     flex: 1 1 calc(50% - 16px); /* Dos productos por fila en tablets */
@@ -876,25 +898,25 @@ button {
   width: 250px;
 }
 
-@media(max-width:768px){
-  .contenedorDetalleCarrito{
+@media (max-width: 768px) {
+  .contenedorDetalleCarrito {
     flex-direction: column;
     height: 100%;
     margin-bottom: 5%;
   }
 
-  .contenedorEntrega{
+  .contenedorEntrega {
     width: 90%;
   }
 
-  .contenedorResumen{
+  .contenedorResumen {
     width: 100%;
   }
 }
 
 /*---------------------------------Estilo registro.html--------------------------------------*/
 
-.mainRegistro{
+.mainRegistro {
   display: flex;
   justify-content: center;
   justify-items: center;
@@ -902,7 +924,7 @@ button {
   margin-bottom: 5%;
 }
 
-.contenedorFormulario{
+.contenedorFormulario {
   width: 50%;
   height: 400px;
   border: 2px solid black;
@@ -912,7 +934,7 @@ button {
   align-items: center;
 }
 
-.contenedorInput{
+.contenedorInput {
   width: 90%;
   background-color: #ffffff;
   padding-top: 30px;
@@ -920,7 +942,7 @@ button {
   padding-bottom: 40px;
 }
 
-.contenedorInput input{
+.contenedorInput input {
   width: 90%;
   height: 30px;
 }
@@ -933,7 +955,7 @@ button {
   margin-bottom: 5%;
 }
 
-.botonVolver{
+.botonVolver {
   width: 30%;
   padding: 10px;
   border: none;
@@ -947,7 +969,7 @@ button {
   margin-right: 2%;
 }
 
-.botonSucces{
+.botonSucces {
   width: 70%;
   padding: 10px;
   border: none;
@@ -959,12 +981,11 @@ button {
   text-align: center;
 }
 
-
-@media(max-width:768px){
-  .contenedorFormulario{
+@media (max-width: 768px) {
+  .contenedorFormulario {
     width: 90%;
   }
-  .contenedorInput{
+  .contenedorInput {
     width: 100%;
     background-color: #ffffff;
     padding-top: 30px;
