--- a/css/style.css
+++ b/css/style.css
@@ -65,4 +65,37 @@
   background-color: #003d80;
 }
 
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    height: auto;
+    background-color: rgb(255, 255, 255);
+  }
+  .header .contenedorLogo {
+    width: 100%;
+    height: auto;
+    background-color: rgb(255, 255, 255);
+  }
+  .header .contenedorLogo img {
+    width: 100%;
+    height: 100%;
+  }
+  .header .contenedorUsuario {
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .header .contenedorUsuario img {
+    width: 25px;
+    margin-left: 4%;
+  }
+  .header .contenedorBuscador {
+    width: 100%;
+    justify-content: center;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
