--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
 //Importo estilo _header.scss
 @import "./layout/header";
-@import "./layout/media/media768"
+@import "./layout/media/media768";
+@import "./layout/categorias";
