--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,68 @@
     width: 100%;
     justify-content: center;
   }
+  /*-------------------------------Categoria-----------------------------------------*/
+  .menu {
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+  }
+  .contenedorCategorias .menu a,
+  .menu button {
+    flex: 1 1 45%; /* Dos por fila */
+  }
+  .menu > * {
+    flex: none;
+    width: 100%; /* Ocupan todo el ancho disponible */
+  }
+}
+.contenedorCategorias {
+  margin-top: 3%;
+  margin-bottom: 2%;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 10px 0;
+}
+.contenedorCategorias .menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  background-color: rgb(255, 255, 255);
+  width: 80%;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+.contenedorCategorias .menu > * {
+  flex: 1;
+  text-align: center;
+}
+.contenedorCategorias .menu a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+.contenedorCategorias .menu a:hover {
+  color: #007bff;
+}
+.contenedorCategorias .menu button {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(16, 47, 226);
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  text-align: center;
+}
+.contenedorCategorias .menu button:hover {
+  background-color: #002752;
+  color: beige;
 }
 
 /*# sourceMappingURL=style.css.map */
