--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    margin-top: 15px;
   }
   .header .contenedorUsuario img {
     width: 25px;
@@ -95,6 +96,8 @@
   .header .contenedorBuscador {
     width: 100%;
     justify-content: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
   /*-------------------------------Categoria-----------------------------------------*/
   .menu {
@@ -109,6 +112,11 @@
   .menu > * {
     flex: none;
     width: 100%; /* Ocupan todo el ancho disponible */
+  }
+  /*Banner*/
+  .contenedorBanner {
+    width: 100%;
+    margin-left: 0%;
   }
 }
 .contenedorCategorias {
@@ -158,6 +166,15 @@
 .contenedorCategorias .menu button:hover {
   background-color: #002752;
   color: beige;
+}
+
+.contenedorBanner {
+  width: 90%;
+  display: flex;
+  margin-left: 5%;
+}
+.contenedorBanner img {
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
