--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -24,6 +24,7 @@
       display: flex;
       align-items: center;
       justify-content: space-evenly;
+      margin-top: 15px;
 
       img {
         width: 25px;
@@ -35,6 +36,8 @@
     .contenedorBuscador {
       width: 100%;
       justify-content: center;
+      margin-top: 15px;
+      margin-bottom: 15px;
     }
   }
 
@@ -54,5 +57,11 @@
   .menu > * {
     flex: none;
     width: 100%; /* Ocupan todo el ancho disponible */
+  }
+
+  /*Banner*/
+  .contenedorBanner {
+    width: 100%;
+    margin-left: 0%;
   }
 }
