--- a/css/style.css
+++ b/css/style.css
@@ -177,4 +177,37 @@
   width: 100%;
 }
 
+.contenedorMarcas {
+  width: 90%;
+  margin-left: 5%;
+  margin-top: 5%;
+  margin-bottom: 55px;
+  display: flex;
+  justify-content: space-around;
+}
+.contenedorMarcas img {
+  width: 8%;
+  height: 40px;
+}
+
+.cartelMarcas {
+  background-color: #003d80;
+  width: 90%;
+  height: 50px;
+  margin-left: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4%;
+  color: white;
+}
+.cartelMarcas p {
+  font-family: "Open Sans", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: initial;
+  font-variation-settings: "wdth" 100;
+  font-size: x-large;
+}
+
 /*# sourceMappingURL=style.css.map */
