--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -65,5 +65,25 @@
     margin-left: 0%;
   }
 
+  /*Contenido principal(index.html)*/
+  .main-container {
+    flex-direction: row;
+    gap: 40px;
   
+    .banner {
+      flex: 1;
+    }
+  
+    .products {
+      flex: 3;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
+  
+    .product {
+      img {
+        width: 100%;
+        height: 150px;
+      }
+    }
+  }
 }
