--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,8 @@
-//Importo estilo _header.scss
+/*Importo estilos*/
 @import "./layout/header";
 @import "./layout/media/media768";
 @import "./layout/categorias";
 @import "./layout/banner";
 @import "./layout/marcas";
 @import "./layout/nuevosLanzamientos";
+@import "./layout/pieDePagina";
