--- a/scss/layout/_nuevosLanzamientos.scss
+++ b/scss/layout/_nuevosLanzamientos.scss
@@ -1,20 +1,62 @@
+/* Productos */
 .main-container {
+  display: flex;
   flex-direction: row;
-  gap: 40px;
+  gap: 20px;
+  padding: 20px;
+  background-color: #f5f5f5;
+  margin-top: 8%;
+  margin-bottom: 8%;
 
   .banner {
     flex: 1;
+    background-color: #dfe6e9;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+    img {
+      width: 100%;
+      border-radius: 10px;
+    }
   }
 
   .products {
     flex: 3;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300xpx, 1fr));
+    gap: 20px;
   }
 
   .product {
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    padding: 10px;
+    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
     img {
       width: 100%;
-      height: 150px;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+
+    h3 {
+      font-size: 18px;
+      color: #333333;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 16px;
+      color: #555555;
+      margin-bottom: 10px;
     }
   }
 }
