--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 /*Importo estilos*/
 @import "./layout/header";
+@import "./layout/media/media480";
 @import "./layout/media/media768";
 @import "./layout/categorias";
 @import "./layout/banner";
